@@ -20,12 +20,12 @@ package org.apache.mahout.classifier.df.tools;
 import java.util.List;
 import java.util.Random;
 
-import com.google.common.collect.Lists;
 import org.apache.mahout.classifier.df.DecisionForest;
 import org.apache.mahout.classifier.df.builder.DecisionTreeBuilder;
 import org.apache.mahout.classifier.df.data.Data;
 import org.apache.mahout.classifier.df.data.DataLoader;
 import org.apache.mahout.classifier.df.data.Dataset;
+import org.apache.mahout.classifier.df.data.Instance;
 import org.apache.mahout.classifier.df.node.CategoricalNode;
 import org.apache.mahout.classifier.df.node.Leaf;
 import org.apache.mahout.classifier.df.node.Node;
@@ -36,24 +36,28 @@ import org.junit.Assert;
 import org.junit.Before;
 import org.junit.Test;
 
+import com.google.common.collect.Lists;
+
 public final class VisualizerTest extends MahoutTestCase {
   
   private static final String[] TRAIN_DATA = {"sunny,85,85,FALSE,no",
-    "sunny,80,90,TRUE,no", "overcast,83,86,FALSE,yes",
-    "rainy,70,96,FALSE,yes", "rainy,68,80,FALSE,yes", "rainy,65,70,TRUE,no",
-    "overcast,64,65,TRUE,yes", "sunny,72,95,FALSE,no",
-    "sunny,69,70,FALSE,yes", "rainy,75,80,FALSE,yes", "sunny,75,70,TRUE,yes",
-    "overcast,72,90,TRUE,yes", "overcast,81,75,FALSE,yes",
-    "rainy,71,91,TRUE,no"};
+      "sunny,80,90,TRUE,no", "overcast,83,86,FALSE,yes",
+      "rainy,70,96,FALSE,yes", "rainy,68,80,FALSE,yes", "rainy,65,70,TRUE,no",
+      "overcast,64,65,TRUE,yes", "sunny,72,95,FALSE,no",
+      "sunny,69,70,FALSE,yes", "rainy,75,80,FALSE,yes", "sunny,75,70,TRUE,yes",
+      "overcast,72,90,TRUE,yes", "overcast,81,75,FALSE,yes",
+      "rainy,71,91,TRUE,no"};
   
   private static final String[] TEST_DATA = {"rainy,70,96,TRUE,-",
-    "overcast,64,65,TRUE,-", "sunny,75,90,TRUE,-",};
+      "overcast,64,65,TRUE,-", "sunny,75,90,TRUE,-",};
   
   private static final String[] ATTR_NAMES = {"outlook", "temperature",
-    "humidity", "windy", "play"};
+      "humidity", "windy", "play"};
   
   private Random rng;
+  
   private Data data;
+  
   private Data testData;
   
   @Override
@@ -61,10 +65,11 @@ public final class VisualizerTest extends MahoutTestCase {
   public void setUp() throws Exception {
     super.setUp();
     
-    rng = RandomUtils.getRandom();
+    rng = RandomUtils.getRandom(1);
     
     // Dataset
-    Dataset dataset = DataLoader.generateDataset("C N N C L", false, TRAIN_DATA);
+    Dataset dataset = DataLoader
+        .generateDataset("C N N C L", false, TRAIN_DATA);
     
     // Training data
     data = DataLoader.loadData(dataset, TRAIN_DATA);
@@ -80,10 +85,9 @@ public final class VisualizerTest extends MahoutTestCase {
     builder.setM(data.getDataset().nbAttributes() - 1);
     Node tree = builder.build(rng, data);
     
-    assertEquals(TreeVisualizer.toString(tree, data.getDataset(), ATTR_NAMES),
-      "\noutlook = rainy\n|   windy = FALSE : yes\n|   windy = TRUE : no\n"
-        + "outlook = overcast : yes\n"
-        + "outlook = sunny\n|   humidity < 85 : yes\n|   humidity >= 85 : no");
+    assertEquals("\noutlook = rainy\n|   windy = FALSE : yes\n|   windy = TRUE : no\n"
+            + "outlook = sunny\n|   humidity < 85 : yes\n|   humidity >= 85 : no\n"
+            + "outlook = overcast : yes", TreeVisualizer.toString(tree, data.getDataset(), ATTR_NAMES));
   }
   
   @Test
@@ -93,8 +97,9 @@ public final class VisualizerTest extends MahoutTestCase {
     builder.setM(data.getDataset().nbAttributes() - 1);
     Node tree = builder.build(rng, data);
     
-    String[] prediction = TreeVisualizer.predictTrace(tree, testData, ATTR_NAMES);
-    Assert.assertArrayEquals(new String[]{
+    String[] prediction = TreeVisualizer.predictTrace(tree, testData,
+        ATTR_NAMES);
+    Assert.assertArrayEquals(new String[] {
         "outlook = rainy -> windy = TRUE -> no", "outlook = overcast -> yes",
         "outlook = sunny -> (humidity = 90) >= 85 -> no"}, prediction);
   }
@@ -103,22 +108,51 @@ public final class VisualizerTest extends MahoutTestCase {
   public void testForestVisualize() throws Exception {
     // Tree
     NumericalNode root = new NumericalNode(2, 90, new Leaf(0),
-      new CategoricalNode(0, new double[] {0, 1, 2}, new Node[] {
-        new NumericalNode(1, 71, new Leaf(0), new Leaf(1)), new Leaf(1),
-        new Leaf(0)}));
+        new CategoricalNode(0, new double[] {0, 1, 2}, new Node[] {
+            new NumericalNode(1, 71, new Leaf(0), new Leaf(1)), new Leaf(1),
+            new Leaf(0)}));
     List<Node> trees = Lists.newArrayList();
     trees.add(root);
     
     // Forest
     DecisionForest forest = new DecisionForest(trees);
-    assertEquals(ForestVisualizer.toString(forest, data.getDataset(), null),
-      "Tree[1]:\n2 < 90 : yes\n2 >= 90\n"
-        + "|   0 = rainy\n|   |   1 < 71 : yes\n|   |   1 >= 71 : no\n"
-        + "|   0 = sunny : no\n" + "|   0 = overcast : yes\n");
+    assertEquals("Tree[1]:\n2 < 90 : yes\n2 >= 90\n"
+            + "|   0 = rainy\n|   |   1 < 71 : yes\n|   |   1 >= 71 : no\n"
+            + "|   0 = sunny : no\n" + "|   0 = overcast : yes\n", ForestVisualizer.toString(forest, data.getDataset(), null));
+
+    assertEquals("Tree[1]:\nhumidity < 90 : yes\nhumidity >= 90\n"
+            + "|   outlook = rainy\n|   |   temperature < 71 : yes\n|   |   temperature >= 71 : no\n"
+            + "|   outlook = sunny : no\n" + "|   outlook = overcast : yes\n", ForestVisualizer.toString(forest, data.getDataset(), ATTR_NAMES));
+  }
+  
+  @Test
+  public void testLeafless() throws Exception {
+    List<Instance> instances = Lists.newArrayList();
+    for (int i = 0; i < data.size(); i++) {
+      if (data.get(i).get(0) != 0.0d) {
+        instances.add(data.get(i));
+      }
+    }
+    Data lessData = new Data(data.getDataset(), instances);
     
-    assertEquals(ForestVisualizer.toString(forest, data.getDataset(), ATTR_NAMES),
-      "Tree[1]:\nhumidity < 90 : yes\nhumidity >= 90\n"
-        + "|   outlook = rainy\n|   |   temperature < 71 : yes\n|   |   temperature >= 71 : no\n"
-        + "|   outlook = sunny : no\n" + "|   outlook = overcast : yes\n");
+    // build tree
+    DecisionTreeBuilder builder = new DecisionTreeBuilder();
+    builder.setM(data.getDataset().nbAttributes() - 1);
+    builder.setMinSplitNum(0);
+    builder.setComplemented(false);
+    Node tree = builder.build(rng, lessData);
+
+    assertEquals("\noutlook = sunny\n|   humidity < 85 : yes\n|   humidity >= 85 : no\noutlook = overcast : yes", TreeVisualizer.toString(tree, data.getDataset(), ATTR_NAMES));
+  }
+  
+  @Test
+  public void testEmpty() throws Exception {
+    Data emptyData = new Data(data.getDataset());
+    
+    // build tree
+    DecisionTreeBuilder builder = new DecisionTreeBuilder();
+    Node tree = builder.build(rng, emptyData);
+
+    assertEquals(" : unknown", TreeVisualizer.toString(tree, data.getDataset(), ATTR_NAMES));
   }
 }
